# meloncraft

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
crates/meloncraft_generator/: Cargo.toml
crates/meloncraft_generator/src/: lib.rs  main.rs
crates/meloncraft_packets/: Cargo.toml
crates/meloncraft_packets/src/: clientbound_messenger.rs  clientbound_packet.rs  incoming_messenger.rs  incoming_packet.rs  lib.rs  outgoing_messenger.rs  outgoing_packet.rs  serverbound_messenger.rs  serverbound_packet.rs
crates/meloncraft_packets/src/clientbound/: mod.rs
crates/meloncraft_packets/src/clientbound/configuration/: add_resource_pack.rs  clear_dialog.rs  code_of_conduct.rs  cookie_request.rs  custom_report_details.rs  disconnect.rs  finish_configuration.rs  keep_alive.rs  mod.rs  ping.rs  registry_data.rs  remove_resource_pack.rs  reset_chat.rs  select_known_packs.rs  server_links.rs  set_feature_flags.rs  show_dialog.rs  store_cookie.rs  transfer.rs  update_tags.rs
crates/meloncraft_packets/src/clientbound/login/: disconnect.rs  encryption_request.rs  login_success.rs  mod.rs  set_compression.rs
crates/meloncraft_packets/src/clientbound/play/: chunk_data.rs  game_event.rs  login.rs  mod.rs  player_info_update.rs  set_center_chunk.rs  synchronize_player_position.rs
crates/meloncraft_packets/src/clientbound/status/: mod.rs  pong.rs  status_response.rs
crates/meloncraft_packets/src/incoming/: mod.rs
crates/meloncraft_packets/src/incoming/handshaking/: handshake.rs  mod.rs
crates/meloncraft_packets/src/incoming/login/: encryption_response.rs  login_acknowledged.rs  login_start.rs  mod.rs
crates/meloncraft_packets/src/incoming/status/: mod.rs  ping.rs  status_request.rs
crates/meloncraft_packets/src/outgoing/: mod.rs
crates/meloncraft_packets/src/outgoing/configuration/: cookie_request.rs  disconnect.rs  finish_configuration.rs  keep_alive.rs  mod.rs  ping.rs  registry_data.rs  reset_chat.rs
crates/meloncraft_packets/src/outgoing/login/: disconnect.rs  encryption_request.rs  login_success.rs  mod.rs  set_compression.rs
crates/meloncraft_packets/src/outgoing/status/: mod.rs  pong.rs  status_response.rs
crates/meloncraft_packets/src/serverbound/: mod.rs
crates/meloncraft_packets/src/serverbound/configuration/: accept_code_of_conduct.rs  acknowledge_finish_configuration.rs  client_information.rs  cookie_response.rs  finish_configuration.rs  keep_alive.rs  mod.rs  pong.rs  resource_pack_response.rs  select_known_packs.rs
crates/meloncraft_packets/src/serverbound/handshaking/: handshake.rs  mod.rs
crates/meloncraft_packets/src/serverbound/login/: encryption_response.rs  login_acknowledged.rs  login_start.rs  mod.rs
crates/meloncraft_packets/src/serverbound/play/: confirm_teleportation.rs  mod.rs
crates/meloncraft_packets/src/serverbound/status/: mod.rs  ping.rs  status_request.rs
src/meloncraft_chat_broadcasting/: Cargo.toml
src/meloncraft_chat_broadcasting/src/: lib.rs  plugin.rs  send.rs
src/meloncraft_default_commands/: Cargo.toml
src/meloncraft_default_commands/src/: lib.rs  plugin.rs  teleport.rs
src/meloncraft_init_play/: Cargo.toml
src/meloncraft_init_play/src/: lib.rs
src/meloncraft_join/: Cargo.toml
src/meloncraft_join/src/: handshaking.rs  lib.rs  login_start.rs  save_client_info.rs  state.rs
src/meloncraft_network/: Cargo.toml
src/meloncraft_network/src/: client_connections.rs  connection_listener.rs  connection_manager.rs  lib.rs  listener.rs  packet.rs  plugin.rs  stream_reader.rs  stream_writer.rs  tcp_reader.rs  tcp_writer.rs
src/meloncraft_packet_forwarding/: Cargo.toml
src/meloncraft_packet_forwarding/src/: chat_command.rs  chat_message.rs  intention.rs  lib.rs  player_action.rs  plugin.rs
src/meloncraft_packets/: Cargo.toml
src/meloncraft_packets/src/: clientbound_messenger.rs  clientbound_packet.rs  lib.rs  serverbound_messenger.rs  serverbound_packet.rs
src/meloncraft_packets/src/clientbound/: mod.rs
src/meloncraft_packets/src/clientbound/configuration/: add_resource_pack.rs  clear_dialog.rs  code_of_conduct.rs  cookie_request.rs  custom_report_details.rs  disconnect.rs  finish_configuration.rs  keep_alive.rs  mod.rs  ping.rs  registry_data.rs  remove_resource_pack.rs  reset_chat.rs  select_known_packs.rs  server_links.rs  set_feature_flags.rs  show_dialog.rs  store_cookie.rs  transfer.rs  update_tags.rs
src/meloncraft_packets/src/clientbound/login/: disconnect.rs  encryption_request.rs  login_success.rs  mod.rs  set_compression.rs
src/meloncraft_packets/src/clientbound/play/: acknowledge_block_change.rs  block_update.rs  boss_event.rs  change_difficulty.rs  chunk_data.rs  clear_titles.rs  game_event.rs  login.rs  mod.rs  player_abilities.rs  player_info_update.rs  server_data.rs  set_actionbar_text.rs  set_border_center.rs  set_border_size.rs  set_border_warning_delay.rs  set_border_warning_distance.rs  set_center_chunk.rs  set_default_spawn_position.rs  set_experience.rs  set_health.rs  set_subtitle_text.rs  set_ticking_state.rs  set_time.rs  set_title_animation_times.rs  set_title_text.rs  synchronize_player_position.rs  system_chat.rs
src/meloncraft_packets/src/clientbound/status/: mod.rs  pong.rs  status_response.rs
src/meloncraft_packets/src/serverbound/: mod.rs
src/meloncraft_packets/src/serverbound/configuration/: accept_code_of_conduct.rs  acknowledge_finish_configuration.rs  client_information.rs  cookie_response.rs  finish_configuration.rs  keep_alive.rs  mod.rs  pong.rs  resource_pack_response.rs  select_known_packs.rs
src/meloncraft_player_state/: Cargo.toml
src/meloncraft_player_state/src/: client_action.rs  gamemode.rs  health.rs  lib.rs  movement.rs  plugin.rs
src/meloncraft_resource_forwarding/: Cargo.toml
src/meloncraft_resource_forwarding/src/: data.rs  default_spawn.rs  difficulty.rs  lib.rs  plugin.rs  ticking.rs  time.rs  weather_intensity.rs  world_border.rs  world_spawn.rs
src/meloncraft_world_manager/: Cargo.toml
src/meloncraft_world_manager/src/: generator.rs  lib.rs  marker.rs  messages.rs  request_forwarding.rs  sender.rs  setblock.rs  state.rs
(+3005 files in other folders)
