[workspace]
resolver = "3"
members = ["crates/meloncraft_network", "crates/meloncraft_packets", "crates/meloncraft_protocol_types", "crates/meloncraft_client", "crates/meloncraft_handshaking", "crates/meloncraft_server_list", "crates/meloncraft_player", "crates/meloncraft_nbt", "crates/meloncraft_login", "crates/meloncraft_registry", "crates/meloncraft_core", "crates/meloncraft_text", "crates/meloncraft_default_registries", "crates/meloncraft_generator", "crates/meloncraft_chunk", "tools/block_state_generator", "crates/meloncraft_block"]
exclude = [
    "examples"
]

[workspace.dependencies.bevy]
version = "0.17.3"
default-features = false
features = ["debug"]

[package]
name = "meloncraft"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
meloncraft_protocol_types = { path = "crates/meloncraft_protocol_types" }
meloncraft_network = { path = "crates/meloncraft_network" }
meloncraft_client = { path = "crates/meloncraft_client" }
meloncraft_packets = { path = "crates/meloncraft_packets" }
meloncraft_handshaking = { path = "crates/meloncraft_handshaking" }
meloncraft_server_list = { path = "crates/meloncraft_server_list" }
meloncraft_player = { path = "crates/meloncraft_player" }
meloncraft_nbt = { path = "crates/meloncraft_nbt" }
meloncraft_login = { path = "crates/meloncraft_login" }
meloncraft_init_play = { path = "crates/meloncraft_init_play" }
meloncraft_registry = { path = "crates/meloncraft_registry" }
meloncraft_default_registries = { path = "crates/meloncraft_default_registries" }
meloncraft_core = { path = "crates/meloncraft_core" }
meloncraft_text = { path = "crates/meloncraft_text" }
meloncraft_generator = { path = "crates/meloncraft_generator" }
meloncraft_block = { path = "crates/meloncraft_block" }
meloncraft_chunk = { path = "crates/meloncraft_chunk" }

lazy_static = "1.5.0"

[dependencies]
meloncraft_protocol_types = { workspace = true }
meloncraft_network = { workspace = true }
meloncraft_client = { workspace = true }
meloncraft_packets = { workspace = true }
meloncraft_handshaking = { workspace = true }
meloncraft_server_list = { workspace = true }
meloncraft_player = { workspace = true }
meloncraft_nbt = { workspace = true }
meloncraft_login = { workspace = true }
meloncraft_init_play = { workspace = true }
meloncraft_registry = { workspace = true }
meloncraft_default_registries = { workspace = true }
meloncraft_core = { workspace = true }
meloncraft_text = { workspace = true }
#meloncraft_generator = { workspace = true }
meloncraft_block = { workspace = true }
meloncraft_chunk = { workspace = true }

[workspace.lints.clippy]

# Cargo lints:
cargo_common_metadata = "allow" # When ready to release, will be forbidden
multiple_crate_versions = "allow" # Meloncraft has two dependencies: bevy and lazy_static, which require different versions of certain crates. Unavoidable for now.
negative_feature_names = "forbid"
redundant_feature_names = "forbid"
wildcard_dependencies = "forbid"

# Complexity lints:
bind_instead_of_map = "forbid"
bool_comparison = "forbid"
borrow_deref_ref = "forbid"
borrowed_box = "forbid"
bytes_count_to_len = "forbid"
char_lit_as_u8 = "forbid"
clone_on_copy = "forbid"
default_constructed_unit_structs = "forbid"
deprecated_cfg_attr = "forbid"
deref_addrof = "forbid"
derivable_impls = "warn"
diverging_sub_expression = "forbid"
double_comparisons = "forbid"
double_parens = "forbid"
duration_subsec = "forbid"
excessive_nesting = "forbid"
explicit_auto_deref = "forbid"
explicit_counter_loop = "forbid"
explicit_write = "forbid"
extra_unused_lifetimes = "forbid"
extra_unused_type_parameters = "forbid"
filter_map_identity = "forbid"
filter_next = "forbid"
flat_map_identity = "forbid"
get_last_with_len = "forbid"
identity_op = "forbid"
implied_bounds_in_impls = "forbid"
inspect_for_each = "forbid"
int_plus_one = "forbid"
iter_count = "forbid"
iter_kv_map = "forbid"
let_with_type_underscore = "forbid"
manual_abs_diff = "forbid"
manual_c_str_literals = "forbid"
manual_checked_ops = "forbid"
manual_clamp = "forbid"
manual_div_ceil = "forbid"
manual_filter = "forbid"
manual_filter_map = "forbid"
manual_find = "forbid"
manual_find_map = "forbid"
manual_flatten = "forbid"
manual_hash_one = "forbid"
manual_inspect = "forbid"
manual_is_multiple_of = "forbid"
manual_main_separator_str = "forbid"
manual_ok_err = "forbid"
manual_option_as_slice = "forbid"
manual_range_patterns = "forbid"
manual_rem_euclid = "forbid"
manual_slice_size_calculation = "forbid"
manual_split_once = "forbid"
manual_strip = "forbid"
manual_swap = "forbid"
manual_take = "forbid"
manual_unwrap_or = "forbid"
map_all_any_identity = "forbid"
map_flatten = "forbid"
map_identity = "forbid"
match_as_ref = "forbid"
match_single_binding = "forbid"
needless_arbitrary_self_type = "forbid"
needless_as_bytes = "forbid"
needless_bool = "forbid"
needless_bool_assign = "forbid"
needless_borrowed_reference = "forbid"
needless_ifs = "forbid"
needless_lifetimes = "forbid"
needless_match = "forbid"
needless_option_as_deref = "forbid"
needless_option_take = "forbid"
needless_question_mark = "forbid"
needless_splitn = "forbid"
needless_update = "forbid"
neg_cmp_op_on_partial_ord = "forbid"
no_effect = "forbid"
only_used_in_recursion = "forbid"
option_as_ref_deref = "forbid"
option_filter_map = "forbid"
option_map_unit_fn = "forbid"
or_then_unwrap = "forbid"
partialeq_ne_impl = "forbid"
precedence = "forbid"
ptr_offset_with_cast = "forbid"
range_zip_with_len = "forbid"
redundant_as_str = "forbid"
redundant_async_block = "forbid"
redundant_at_rest_pattern = "forbid"
redundant_closure_call = "forbid"
redundant_guards = "forbid"
redundant_slicing = "forbid"
repeat_once = "forbid"
reserve_after_initialization = "forbid"
result_filter_map = "forbid"
result_map_unit_fn = "forbid"
seek_from_current = "forbid"
seek_to_start_instead_of_rewind = "forbid"
short_circuit_statement = "forbid"
single_element_loop = "forbid"
skip_while_next = "forbid"
string_from_utf8_as_bytes = "forbid"
strlen_on_c_strings = "forbid"
swap_with_temporary = "forbid"
temporary_assignment = "forbid"
too_many_arguments = "forbid"
transmute_bytes_to_str = "forbid"
transmute_int_to_bool = "forbid"
transmute_int_to_non_zero = "forbid"
transmute_ptr_to_ref = "forbid"
transmutes_expressible_as_ptr_casts = "forbid"
type_complexity = "forbid"
unit_arg = "forbid"
unnecessary_cast = "forbid"
unnecessary_filter_map = "forbid"
unnecessary_find_map = "forbid"
unnecessary_first_then_check = "forbid"
unnecessary_literal_unwrap = "forbid"
unnecessary_map_on_constructor = "forbid"
unnecessary_min_or_max = "forbid"
unnecessary_operation = "forbid"
unnecessary_sort_by = "forbid"
unnecessary_unwrap = "forbid"
unneeded_wildcard_pattern = "forbid"
unused_format_specs = "forbid"
useless_asref = "forbid"
useless_concat = "forbid"
useless_conversion = "forbid"
useless_format = "forbid"
useless_nonzero_new_unchecked = "forbid"
useless_transmute = "forbid"
vec_box = "forbid"
while_let_loop = "forbid"
wildcard_in_or_patterns = "forbid"
zero_divided_by_zero = "forbid"
zero_prefixed_literal = "forbid"

# Correctness lints:
absurd_extreme_comparisons = "forbid"
almost_swapped = "forbid"
approx_constant = "forbid"
async_yields_async = "forbid"
bad_bit_mask = "forbid"
cast_slice_different_sizes = "forbid"
char_indices_as_byte_indices = "forbid"
deprecated_semver = "forbid"
derive_ord_xor_partial_ord = "forbid"
derived_hash_with_manual_eq = "forbid"
eager_transmute = "forbid"
enum_clike_unportable_variant = "forbid"
eq_op = "forbid"
erasing_op = "forbid"
if_let_mutex = "forbid"
ifs_same_cond = "forbid"
impl_hash_borrow_with_str_and_bytes = "forbid"
impossible_comparisons = "forbid"
ineffective_bit_mask = "forbid"
infinite_iter = "forbid"
inherent_to_string_shadow_display = "forbid"
inline_fn_without_body = "forbid"
invalid_regex = "forbid"
inverted_saturating_sub = "forbid"
invisible_characters = "forbid"
iter_next_loop = "forbid"
iter_skip_zero = "forbid"
iterator_step_by_zero = "forbid"
let_underscore_lock = "forbid"
lint_groups_priority = "forbid"
match_str_case_mismatch = "forbid"
mem_replace_with_uninit = "forbid"
min_max = "forbid"
mistyped_literal_suffixes = "forbid"
modulo_one = "forbid"
mut_from_ref = "forbid"
never_loop = "forbid"
non_octal_unix_permissions = "forbid"
nonsensical_open_options = "forbid"
not_unsafe_ptr_arg_deref = "forbid"
option_env_unwrap = "forbid"
out_of_bounds_indexing = "forbid"
panicking_overflow_checks = "forbid"
panicking_unwrap = "forbid"
possible_missing_comma = "forbid"
read_line_without_trim = "forbid"
recursive_format_impl = "forbid"
redundant_comparisons = "forbid"
reversed_empty_ranges = "forbid"
self_assignment = "forbid"
serde_api_misuse = "forbid"
size_of_in_element_count = "forbid"
suspicious_splitn = "forbid"
transmute_null_to_fn = "forbid"
transmuting_null = "forbid"
uninit_assumed_init = "forbid"
uninit_vec = "forbid"
unit_cmp = "forbid"
unit_hash = "forbid"
unit_return_expecting_ord = "forbid"
unsound_collection_transmute = "forbid"
unused_io_amount = "forbid"
useless_attribute = "forbid"
vec_resize_to_zero = "forbid"
while_immutable_condition = "forbid"
wrong_transmute = "forbid"
zst_offset = "forbid"

# Nursery lints:
as_ptr_cast_mut = "forbid"
branches_sharing_code = "forbid"
clear_with_drain = "forbid"
coerce_container_to_any = "forbid"
collection_is_never_read = "forbid"
debug_assert_with_mut_call = "forbid"
derive_partial_eq_without_eq = "forbid"
doc_link_code = "forbid"
equatable_if_let = "forbid"
fallible_impl_from = "deny" # In some cases, unwraps are safe in a From impl.
future_not_send = "forbid"
imprecise_flops = "forbid"
iter_on_empty_collections = "forbid"
iter_on_single_items = "forbid"
iter_with_drain = "forbid"
large_stack_frames = "forbid"
literal_string_with_formatting_args = "forbid"
missing_const_for_fn = "forbid"
needless_collect = "forbid"
needless_pass_by_ref_mut = "forbid"
needless_type_cast = "forbid"
non_send_fields_in_send_ty = "forbid"
nonstandard_macro_braces = "forbid"
option_if_let_else = "forbid"
or_fun_call = "forbid"
path_buf_push_overwrite = "forbid"
read_zero_byte_vec = "forbid"
redundant_clone = "forbid"
redundant_pub_crate = "forbid"
search_is_some = "forbid"
set_contains_or_insert = "forbid"
significant_drop_in_scrutinee = "forbid"
significant_drop_tightening = "forbid"
single_option_map = "forbid"
string_lit_as_bytes = "forbid"
suboptimal_flops = "forbid"
suspicious_operation_groupings = "forbid"
too_long_first_doc_paragraph = "forbid"
trailing_empty_array = "forbid"
trait_duplication_in_bounds = "forbid"
transmute_undefined_repr = "forbid"
trivial_regex = "forbid"
tuple_array_conversions = "forbid"
type_repetition_in_bounds = "forbid"
uninhabited_references = "forbid"
unnecessary_struct_initialization = "forbid"
unused_peekable = "forbid"
unused_rounding = "forbid"
use_self = "allow" # Prefer using the structd name for clarity
useless_let_if_seq = "forbid"
volatile_composites = "forbid"
while_float = "forbid"

# Pedantic lints:
assigning_clones = "allow"
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
cast_sign_loss = "allow"
checked_conversions = "allow"
cloned_instead_of_copied = "allow"
collapsible_else_if = "allow"
comparison_chain = "allow"
copy_iterator = "allow"
decimal_bitwise_operands = "allow"
default_trait_access = "allow"
doc_broken_link = "allow"
doc_comment_double_space_linebreaks = "allow"
doc_link_with_quotes = "allow"
doc_markdown = "allow"
duration_suboptimal_units = "allow"
elidable_lifetime_names = "allow"
empty_enums = "allow"
enum_glob_use = "allow"
expl_impl_clone_on_copy = "allow"
explicit_deref_methods = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
filter_map_next = "allow"
flat_map_option = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
format_collect = "allow"
format_push_string = "allow"
from_iter_instead_of_collect = "allow"
if_not_else = "allow"
ignore_without_reason = "allow"
ignored_unit_patterns = "allow"
implicit_clone = "allow"
implicit_hasher = "allow"
inconsistent_struct_constructor = "allow"
index_refutable_slice = "allow"
inefficient_to_string = "allow"
inline_always = "allow"
into_iter_without_iter = "allow"
invalid_upcast_comparisons = "allow"
ip_constant = "allow"
items_after_statements = "allow"
iter_filter_is_ok = "allow"
iter_filter_is_some = "allow"
iter_not_returning_iterator = "allow"
iter_without_into_iter = "allow"
large_digit_groups = "allow"
large_futures = "allow"
large_stack_arrays = "allow"
large_types_passed_by_value = "allow"
linkedlist = "allow"
macro_use_imports = "allow"
manual_assert = "allow"
manual_ilog2 = "allow"
manual_instant_elapsed = "allow"
manual_is_power_of_two = "allow"
manual_is_variant_and = "allow"
manual_let_else = "allow"
manual_midpoint = "allow"
manual_string_new = "allow"
many_single_char_names = "allow"
map_unwrap_or = "allow"
match_bool = "allow"
match_same_arms = "allow"
match_wild_err_arm = "allow"
match_wildcard_for_single_variants = "allow"
maybe_infinite_iter = "allow"
mismatching_type_param_order = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
mut_mut = "allow"
naive_bytecount = "allow"
needless_bitwise_bool = "allow"
needless_continue = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
no_effect_underscore_binding = "allow"
no_mangle_with_rust_abi = "allow"
non_std_lazy_statics = "allow"
nonminimal_bool = "allow"
option_as_ref_cloned = "allow"
option_option = "allow"
overly_complex_bool_expr = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
ptr_offset_by_literal = "allow"
pub_underscore_fields = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
ref_as_ptr = "allow"
ref_binding_to_reference = "allow"
ref_option = "allow"
ref_option_ref = "allow"
return_self_not_must_use = "allow"
same_functions_in_if_condition = "allow"
same_length_and_capacity = "allow"
self_only_used_in_recursion = "allow"
semicolon_if_nothing_returned = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
single_char_pattern = "allow"
single_match_else = "allow"
stable_sort_primitive = "allow"
str_split_at_newline = "allow"
string_add_assign = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
transmute_ptr_to_ptr = "allow"
trivially_copy_pass_by_ref = "allow"
unchecked_time_subtraction = "allow"
unicode_not_nfc = "allow"
uninlined_format_args = "allow"
unnecessary_box_returns = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_join = "allow"
unnecessary_literal_bound = "allow"
unnecessary_semicolon = "allow"
unnecessary_trailing_comma = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
unsafe_derive_deserialize = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
verbose_bit_mask = "allow"
wildcard_imports = "allow"
zero_sized_map_values = "allow"

# Performance lints
box_collection = "forbid"
boxed_local = "forbid"
cloned_ref_to_slice_refs = "forbid"
cmp_owned = "forbid"
collapsible_str_replace = "forbid"
double_ended_iterator_last = "forbid"
drain_collect = "forbid"
expect_fun_call = "forbid"
extend_with_drain = "forbid"
format_in_format_args = "forbid"
iter_overeager_cloned = "forbid"
large_const_arrays = "forbid"
large_enum_variant = "forbid"
manual_contains = "forbid"
manual_ignore_case_cmp = "forbid"
manual_memcpy = "forbid"
manual_retain = "forbid"
manual_str_repeat = "forbid"
manual_try_fold = "forbid"
map_entry = "forbid"
missing_const_for_thread_local = "forbid"
missing_spin_loop = "forbid"
readonly_write_lock = "forbid"
redundant_allocation = "forbid"
redundant_iter_cloned = "forbid"
regex_creation_in_loops = "forbid"
replace_box = "forbid"
result_large_err = "forbid"
sliced_string_as_bytes = "forbid"
slow_vector_initialization = "forbid"
to_string_in_format_args = "forbid"
unbuffered_bytes = "forbid"
unnecessary_to_owned = "forbid"
useless_vec = "forbid"
vec_init_then_push = "forbid"
waker_clone_wake = "forbid"

# Restriction lints
absolute_paths = "allow"
alloc_instead_of_core = "allow"
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_pointer_underscore = "allow"
as_underscore = "allow"
assertions_on_result_states = "allow"
big_endian_bytes = "allow"
cfg_not_test = "allow"
clone_on_ref_ptr = "allow"
cognitive_complexity = "allow"
create_dir = "allow"
dbg_macro = "allow"
decimal_literal_representation = "allow"
default_numeric_fallback = "allow"
default_union_representation = "allow"
deref_by_slicing = "allow"
disallowed_script_idents = "allow"
doc_include_without_cfg = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else = "allow"
empty_drop = "allow"
empty_enum_variants_with_brackets = "allow"
empty_structs_with_brackets = "allow"
error_impl_error = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
exit = "allow"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
filetype_is_file = "allow"
float_arithmetic = "allow"
float_cmp_const = "allow"
fn_to_numeric_cast_any = "allow"
get_unwrap = "allow"
host_endian_bytes = "allow"
if_then_some_else_none = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
infinite_loop = "allow"
inline_asm_x86_att_syntax = "allow"
inline_asm_x86_intel_syntax = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "allow"
large_include_file = "allow"
let_underscore_must_use = "allow"
let_underscore_untyped = "allow"
little_endian_bytes = "allow"
lossy_float_literal = "allow"
map_err_ignore = "allow"
map_with_unused_argument_over_ranges = "allow"
mem_forget = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_asserts_for_indexing = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mixed_read_write_in_expression = "allow"
mod_module_files = "allow"
module_name_repetitions = "allow"
modulo_arithmetic = "allow"
multiple_inherent_impl = "allow"
multiple_unsafe_ops_per_block = "allow"
mutex_atomic = "allow"
mutex_integer = "allow"
needless_raw_strings = "allow"
non_ascii_literal = "allow"
non_zero_suggestions = "allow"
panic = "allow"
panic_in_result_fn = "allow"
partial_pub_fields = "allow"
pathbuf_init_then_push = "allow"
pattern_type_mismatch = "allow"
pointer_format = "allow"
precedence_bits = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
pub_without_shorthand = "allow"
question_mark_used = "allow"
rc_buffer = "allow"
rc_mutex = "allow"
redundant_test_prefix = "allow"
redundant_type_annotations = "allow"
ref_patterns = "allow"
renamed_function_params = "allow"
rest_pat_in_fully_bound_structs = "allow"
return_and_then = "allow"
same_name_method = "allow"
self_named_module_files = "allow"
semicolon_inside_block = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "allow"
string_add = "allow"
string_lit_chars_any = "allow"
string_slice = "allow"
suspicious_xor_used_as_pow = "allow"
tests_outside_test_module = "allow"
todo = "allow"
try_err = "allow"
undocumented_unsafe_blocks = "allow"
unimplemented = "allow"
unnecessary_safety_comment = "allow"
unnecessary_safety_doc = "allow"
unnecessary_self_imports = "allow"
unneeded_field_pattern = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
unused_result_ok = "allow"
unused_trait_names = "allow"
unwrap_in_result = "allow"
unwrap_used = "allow"
use_debug = "allow"
verbose_file_reads = "allow"
wildcard_enum_match_arm = "allow"

# Style lints
assertions_on_constants = "warn"
assign_op_pattern = "warn"
blocks_in_conditions = "warn"
bool_assert_comparison = "warn"
borrow_interior_mutable_const = "warn"
box_default = "warn"
builtin_type_shadow = "warn"
byte_char_slices = "warn"
bytes_nth = "warn"
chars_last_cmp = "warn"
chars_next_cmp = "warn"
cmp_null = "warn"
collapsible_if = "warn"
collapsible_match = "warn"
comparison_to_empty = "warn"
default_instead_of_iter_empty = "warn"
disallowed_fields = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_names = "warn"
disallowed_types = "warn"
doc_lazy_continuation = "warn"
doc_overindented_list_items = "warn"
double_must_use = "warn"
duplicate_underscore_argument = "warn"
enum_variant_names = "warn"
err_expect = "warn"
excessive_precision = "warn"
field_reassign_with_default = "warn"
filter_map_bool_then = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
for_kv_map = "warn"
from_over_into = "warn"
from_str_radix_10 = "warn"
get_first = "warn"
if_same_then_else = "warn"
implicit_saturating_add = "warn"
implicit_saturating_sub = "warn"
inconsistent_digit_grouping = "warn"
infallible_destructuring_match = "warn"
inherent_to_string = "warn"
init_numbered_fields = "warn"
into_iter_on_ref = "warn"
io_other_error = "warn"
is_digit_ascii_radix = "warn"
items_after_test_module = "warn"
iter_cloned_collect = "warn"
iter_next_slice = "warn"
iter_nth = "warn"
iter_nth_zero = "warn"
iter_skip_next = "warn"
just_underscores_and_digits = "warn"
legacy_numeric_constants = "warn"
len_without_is_empty = "warn"
len_zero = "warn"
let_and_return = "warn"
let_unit_value = "warn"
main_recursion = "warn"
manual_async_fn = "warn"
manual_bits = "warn"
manual_dangling_ptr = "warn"
manual_is_ascii_check = "warn"
manual_is_finite = "warn"
manual_is_infinite = "warn"
manual_map = "warn"
manual_next_back = "warn"
manual_non_exhaustive = "warn"
manual_ok_or = "warn"
manual_pattern_char_comparison = "warn"
manual_range_contains = "warn"
manual_repeat_n = "warn"
manual_rotate = "warn"
manual_saturating_arithmetic = "warn"
manual_slice_fill = "warn"
manual_while_let_some = "warn"
map_clone = "warn"
map_collect_result_unit = "warn"
match_like_matches_macro = "warn"
match_overlapping_arm = "warn"
match_ref_pats = "warn"
match_result_ok = "warn"
mem_replace_option_with_none = "warn"
mem_replace_option_with_some = "warn"
mem_replace_with_default = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mixed_attributes_style = "warn"
mixed_case_hex_literals = "warn"
module_inception = "warn"
multiple_bound_locations = "warn"
must_use_unit = "warn"
mut_mutex_lock = "warn"
needless_borrow = "warn"
needless_borrows_for_generic_args = "warn"
needless_doctest_main = "warn"
needless_else = "warn"
needless_late_init = "warn"
needless_parens_on_range_literals = "warn"
needless_pub_self = "warn"
needless_range_loop = "warn"
needless_return = "warn"
needless_return_with_question_mark = "warn"
neg_multiply = "warn"
new_ret_no_self = "warn"
new_without_default = "warn"
non_minimal_cfg = "warn"
obfuscated_if_else = "warn"
ok_expect = "warn"
op_ref = "warn"
option_map_or_none = "warn"
owned_cow = "warn"
partialeq_to_none = "warn"
print_literal = "warn"
print_with_newline = "warn"
println_empty_string = "warn"
ptr_arg = "warn"
ptr_eq = "warn"
question_mark = "warn"
redundant_closure = "warn"
redundant_field_names = "warn"
redundant_pattern = "warn"
redundant_pattern_matching = "warn"
redundant_static_lifetimes = "warn"
result_map_or_into_option = "warn"
result_unit_err = "warn"
same_item_push = "warn"
self_named_constructors = "warn"
should_implement_trait = "warn"
single_char_add_str = "warn"
single_component_path_imports = "warn"
single_match = "warn"
string_extend_chars = "warn"
tabs_in_doc_comments = "warn"
to_digit_is_some = "warn"
to_string_trait_impl = "warn"
toplevel_ref_arg = "warn"
trim_split_whitespace = "warn"
unnecessary_fallible_conversions = "warn"
unnecessary_fold = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_map_or = "warn"
unnecessary_mut_passed = "warn"
unnecessary_owned_empty_strings = "warn"
unneeded_struct_pattern = "warn"
unsafe_removed_from_name = "warn"
unused_enumerate_index = "warn"
unused_unit = "warn"
unusual_byte_groupings = "warn"
unwrap_or_default = "warn"
upper_case_acronyms = "warn"
while_let_on_iterator = "warn"
write_literal = "warn"
write_with_newline = "warn"
writeln_empty_string = "warn"
wrong_self_convention = "warn"
zero_ptr = "warn"

# Suspicious lints
almost_complete_range = "warn"
arc_with_non_send_sync = "warn"
await_holding_invalid_type = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
blanket_clippy_restriction_lints = "warn"
cast_abs_to_unsigned = "warn"
cast_enum_constructor = "warn"
cast_enum_truncation = "warn"
cast_nan_to_int = "warn"
cast_slice_from_raw_parts = "warn"
confusing_method_to_numeric_cast = "warn"
const_is_empty = "warn"
crate_in_macro_def = "warn"
crosspointer_transmute = "warn"
declare_interior_mutable_const = "warn"
deprecated_clippy_cfg_attr = "warn"
doc_nested_refdefs = "warn"
doc_suspicious_footnotes = "warn"
drop_non_drop = "warn"
duplicate_mod = "warn"
duplicated_attributes = "warn"
empty_docs = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
empty_loop = "warn"
float_equality_without_abs = "warn"
forget_non_drop = "warn"
four_forward_slashes = "warn"
from_raw_with_void_ptr = "warn"
incompatible_msrv = "warn"
ineffective_open_options = "warn"
infallible_try_from = "warn"
iter_out_of_bounds = "warn"
join_absolute_paths = "warn"
let_underscore_future = "warn"
lines_filter_map_ok = "warn"
macro_metavars_in_unsafe = "warn"
manual_unwrap_or_default = "warn"
misnamed_getters = "warn"
misrefactored_assign_op = "warn"
missing_transmute_annotations = "warn"
multi_assignments = "warn"
mut_range_bound = "warn"
mutable_key_type = "warn"
needless_character_iteration = "warn"
needless_maybe_sized = "warn"
no_effect_replace = "warn"
non_canonical_clone_impl = "warn"
non_canonical_partial_ord_impl = "warn"
octal_escapes = "warn"
path_ends_with_ext = "warn"
permissions_set_readonly_false = "warn"
pointers_in_nomem_asm_block = "warn"
possible_missing_else = "warn"
print_in_format_impl = "warn"
rc_clone_in_vec_init = "warn"
redundant_locals = "warn"
repeat_vec_with_capacity = "warn"
repr_packed_without_abi = "warn"
single_range_in_vec_init = "warn"
size_of_ref = "warn"
suspicious_arithmetic_impl = "warn"
suspicious_assignment_formatting = "warn"
suspicious_command_arg_space = "warn"
suspicious_doc_comments = "warn"
suspicious_else_formatting = "warn"
suspicious_map = "warn"
suspicious_op_assign_impl = "warn"
suspicious_open_options = "warn"
suspicious_to_owned = "warn"
suspicious_unary_op_formatting = "warn"
swap_ptr_to_ref = "warn"
test_attr_in_doctest = "warn"
type_id_on_box = "warn"
unconditional_recursion = "warn"
unnecessary_clippy_cfg = "warn"
unnecessary_get_then_check = "warn"
unnecessary_option_map_or_else = "warn"
unnecessary_result_map_or_else = "warn"
zero_repeat_side_effects = "warn"
zombie_processes = "warn"

